Fridge: Add z-index handling, fix overflow issue, move tinymce code to Note class, fix opening editor and dragging simultaneously

--- a/Fridge/src/css/board.css
+++ b/Fridge/src/css/board.css
@@ -60,11 +60,16 @@
     overflow: scroll;
     resize: both;
 }
+.note-inner-wrapper{
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+}
 .note-title{
     font-weight: bold;
     font-size: 1.5rem;
     position: relative;
-    width: fit-content;
+    width: calc(100% - 1.2em);
 }
 .note-title::after{
     content: "";
@@ -72,7 +77,7 @@
     position: absolute;
     bottom: -6px; left: 0;
     height: 2px;
-    width: 110%;
+    width: 100%;
     background-color: var(--color-6);
 }
 .note-close{
@@ -100,11 +105,7 @@
     width: 100%;
     height: calc(100% - (1.3em + 30px));
 }
-.note-drag-zone{
-    width: 100%;
-    height: 100%;
-    padding: 10px;
-}
+
 .note-moving{
     background-color: var(--color-3);
 }
